--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,8 @@
   box-sizing: border-box;
 }
 
+/* --------------- GENERALE ---------------  */
+
 body {
   background-image: url("../img/bg.jpg");
   background-size: cover;
@@ -37,7 +39,7 @@ h3 {
 
 h1 {
   color: white;
-  font-size: 5rem;
+  font-size: 5.5rem;
   line-height: 0.8;
   margin-bottom: 55px;
 }
@@ -51,7 +53,7 @@ h2 {
 }
 
 h3 {
-  font-size: 2rem;
+  font-size: 2.1rem;
   font-weight: bold;
   margin-bottom: 16px;
 }
@@ -60,12 +62,31 @@ h4 {
   font-size: 1.2rem;
 }
 
+
+/* --------------- WELCOME STYLE ---------------  */
+
+#welcome-main {
+  max-width: 921px;
+  margin-inline: auto;
+}
+
+#welcome h1 {
+  max-width: 50%;
+  padding-top: 50px;
+}
+
 #welcome h3 {
   color: #d20094;
 }
 
+#welcome p, #welcome ul, #welcome label {
+  font-size: 19px;
+}
+
 #welcome p {
   margin-bottom: 50px;
+  max-width: 600px;
+  line-height: 1.3;
 }
 
 #welcome ul {
@@ -78,9 +99,37 @@ h4 {
   display: inline-block;
 }
 
-form *:not(button) {
-  padding-top: 10px;
+/* --------------- PERSONALIZZAZIONE DEL CHECKBOX ---------------  */
+
+#welcome form input {
+  display: none;
 }
+
+/* Stile personalizzato del checkbox */
+#welcome form input + label {
+  position: relative;
+  top: 20px;
+  padding-left: 30px;
+  cursor: pointer;
+}
+
+/* Stile del segno di spunta quando il checkbox è selezionato */
+#welcome form input + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  border: 2px solid white;
+  background-color: transparent;
+}
+
+#welcome form input:checked + label::before {
+  background-color: white;
+}
+
+/* --------------- FINE PERSONALIZZAZIONE DEL CHECKBOX ---------------  */
 
 #proceed {
   float: right;
@@ -91,7 +140,10 @@ form *:not(button) {
   font-weight: bold;
   border: none;
   box-shadow: 0px 0px 20px 4px #53e0e0;
+  cursor: pointer;
 }
+
+/* --------------- FINE WELCOME STYLE ---------------  */
 
 #countdown {
   float: right;
