--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,7 @@ h4 {
 
 /* ----------------------------------- FINE WELCOME STYLE -----------------------------------  */
 
+/* commento inutile */
 
 /* ----------------------------------- INIZIO EXAM STYLE -----------------------------------  */
 
