commit all result

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,14 @@ button#avanti:hover {
   font-size: 1rem;
   font-weight: bold;
   box-shadow: 2px 2px 4px #fff;
+  cursor: pointer;
 }
+
+#results button:hover {
+  background-color: white;
+  color: #d20094;
+}
+
 
 /* --------------------------------------------------------- */
 
