--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,8 +324,12 @@ button#avanti.selected-avanti {
   filter: grayscale(100%) brightness(20%);
 }
 
+#feedback #img-stelle > img.selected-stars {
+  filter: none;
+}
 #feedback #img-stelle img.clicked-star {
   filter: none;
+  filter: drop-shadow(0 0 10px white);
 }
 
 #feedback h2 {
@@ -345,10 +349,6 @@ button#avanti.selected-avanti {
 #img-stelle {
   margin-top: 30px;
   margin-bottom: 70px;
-}
-
-#feedback #img-stelle > img.selected-stars {
-  filter: none;
 }
 
 #img-stelle img:not(:last-child) {
