--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ h4 {
 #welcome form input+label {
   position: relative;
   top: 20px;
-  padding-left: 30px;
+  padding-left: 35px;
   cursor: pointer;
 }
 
@@ -129,7 +129,8 @@ h4 {
 
 /* Stile del segno di spunta quando il checkbox è selezionato */
 #welcome form input:checked+label::before {
-  background-color: white;
+  background-color: #00ffff;
+  box-shadow: 0px 0px 20px 4px #53e0e0;
 }
 
 /* ----------------------------------- FINE PERSONALIZZAZIONE DEL CHECKBOX -----------------------------------  */
