--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,14 @@ h4 {
   font-size: 1.2rem;
 }
 
+.hidden {
+  display: block;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
 /* ----------------------------------- INIZIO WELCOME STYLE -----------------------------------  */
 
 #welcome-main {
@@ -307,9 +315,6 @@ button#avanti.selected-avanti {
   max-width: 200px;
 }
 
-.inline-block {
-  display: inline-block;
-}
 
 #results button {
   width: 200px;
