--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap");
 
 *,
 *::after,
@@ -70,7 +70,7 @@ h4 {
 /* ----------------------------------- INIZIO WELCOME STYLE -----------------------------------  */
 
 #welcome-main {
-  max-width: 921px;
+  max-width: 960px;
   margin-inline: auto;
   margin-top: 120px;
 }
@@ -81,6 +81,8 @@ h4 {
 
 #welcome h3 {
   color: #d20094;
+  font-weight: 600;
+  margin-bottom: 15px;
 }
 
 #welcome p,
@@ -90,7 +92,7 @@ h4 {
 }
 
 #welcome p {
-  margin-bottom: 50px;
+  margin-bottom: 55px;
   max-width: 600px;
   line-height: 1.3;
 }
@@ -143,12 +145,13 @@ h4 {
 #proceed {
   float: right;
   background-color: #00ffff;
-  padding-inline: 45px;
-  padding-block: 15px;
-  font-size: 1.3rem;
-  font-weight: bold;
+  padding-inline: 55px;
+  padding-block: 16px;
+  font-size: 1.4rem;
+  font-weight: 800;
   border: none;
   box-shadow: 0px 0px 20px 4px #53e0e0;
+  font-family: 'Outfit', sans-serif;
   cursor: pointer;
 }
 
