--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -510,3 +510,5 @@ button#avanti.selected-avanti {
 }
 
 /* ----------------------------------- FINE FEEDBACK STYLE -----------------------------------  */
+
+/* commento */
