--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,20 +138,28 @@ h4 {
 #welcome form input:checked+label::before {
   background-color: #00ffff;
   box-shadow: 0px 0px 20px 4px #53e0e0;
+  border: none;
 }
 
 /* ----------------------------------- FINE PERSONALIZZAZIONE DEL CHECKBOX -----------------------------------  */
 
 #proceed {
   float: right;
-  background-color: #00ffff;
+  background-color: transparent;
   padding-inline: 55px;
   padding-block: 16px;
   font-size: 1.4rem;
   font-weight: 800;
-  border: none;
-  box-shadow: 0px 0px 20px 4px #53e0e0;
+  border: 2px solid white;
   font-family: 'Outfit', sans-serif;
+  color: white;
+}
+
+#proceed.proceed-checked {
+  background-color: #00ffff;
+  color: black;
+  box-shadow: 0px 0px 20px 4px #53e0e0;
+  border: none;
   cursor: pointer;
 }
 
@@ -195,8 +203,6 @@ header circle+circle {
   transition: stroke-dasharray 2s;
   transition: stroke 20s ease-in;
 }
-
-
 
 #countdown-text {
   position: absolute;
@@ -434,8 +440,10 @@ button#avanti.selected-avanti {
 
 /* ----------------------------------- INIZIO FEEDBACK STYLE -----------------------------------  */
 #results button:hover {
-  background-color: white;
-  color: #C2128D;
+  background-color: #00FFFF;
+  box-shadow: 0px 0px 20px 4px #53e0e0;
+  color: black;
+  border: none;
 }
 
 #result,
